# cuculiform

./: CMakeLists.txt  README.md
cmake/: FindCityHash.cmake  FindHighwayHash.cmake
src/: .clang-format  bucket.h  chunked_iterator.h  cuculiform.h  fingerprint.h  util.h
tests/: tests.cc
